--- a/searchprogm/app/src/main/res/values/strings.xml
+++ b/searchprogm/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
-    <string name="app_name">search program</string>
+    <string name="app_name">Їжа для вас</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="click">scan</string>
+    <string name="action_settings">Налаштування</string>
+    <string name="click">Сканувати</string>
+    <string name="search">Шукати</string>
+    <string name="inf">Щоб подивитись інформацію про продукт введіть його штрих код, або проскануйте його на упаковці.</string>
+    <string name="enter_barcode">Введіть штрих код товару</string>
+    <string name="or">або</string>
+
+    <string name="name">Назва:</string>
+    <string name="ingredients">Інгредієнти:</string>
+    <string name="back">Назад</string>
 </resources>
