create ingredient activity

--- a/searchprogm/app/src/main/res/values/strings.xml
+++ b/searchprogm/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="name">Назва:</string>
     <string name="ingredients">Інгредієнти:</string>
     <string name="back">Назад</string>
+    <string name="information">Інформація:</string>
 </resources>
